force-app/main/default/objects/Knowledge__kav/fields/FAQ_Answer__c.field-meta.xml
<CustomField>
    <fullName>FAQ_Answer__c</fullName>
    <description>The answer for which the FAQ article is intended to provide.</description>
    <label>Details</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>