force-app/main/default/objects/Knowledge__kav/fields/FAQ_Approval_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>FAQ_Approval_Date_Time__c</fullName>
    <description>Holds time and date that article was approved</description>
    <label>Approval Date/Time</label>
    <type>DateTime</type>
</CustomField>