force-app/main/default/objects/Knowledge__kav/fields/FAQ_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>FAQ_Approval_Status__c</fullName>
    <description>Displays the approval status of the article</description>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Approval_Status</valueSetName>
    </valueSet>
</CustomField>