force-app/main/default/objects/Knowledge__kav/fields/FAQ_Approver__c.field-meta.xml
<CustomField>
    <fullName>FAQ_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of the nominated approver</description>
    <label>Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Knowledge_FAQs</relationshipName>
    <type>Lookup</type>
</CustomField>