force-app/main/default/objects/Knowledge__kav/fields/FAQ_Expiry_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>FAQ_Expiry_Date_Time__c</fullName>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>