force-app/main/default/objects/Knowledge__kav/fields/FAQ_Framework__c.field-meta.xml
<CustomField>
    <fullName>FAQ_Framework__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Framework</label>
    <referenceTo>Master_Framework__c</referenceTo>
    <relationshipLabel>FAQ Framewords</relationshipLabel>
    <relationshipName>Knowledge_FAQ_Framewords</relationshipName>
    <type>Lookup</type>
</CustomField>