force-app/main/default/objects/Knowledge__kav/fields/FAQ_Question__c.field-meta.xml
<CustomField>
    <fullName>FAQ_Question__c</fullName>
    <description>The question to which the FAQ article provides the answer.</description>
    <inlineHelpText>The question to which the FAQ article provides the answer.</inlineHelpText>
    <label>Question</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>