force-app/main/default/objects/Knowledge__kav/fields/Flesch_Kincaid_Score__c.field-meta.xml
<CustomField>
    <fullName>Flesch_Kincaid_Score__c</fullName>
    <inlineHelpText>Provide Flesch Kincaid Score, between 0.0 - 100.0, to indicate readability of article</inlineHelpText>
    <label>Flesch Kincaid Score</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>