force-app/main/default/objects/Knowledge__kav/fields/Framework_Access__c.field-meta.xml
<CustomField>
    <fullName>Framework_Access__c</fullName>
    <label>Access</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>