force-app/main/default/objects/Knowledge__kav/fields/Framework_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Framework_Approval_Status__c</fullName>
    <description>Displays the approval status of the Framework Article</description>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Submitted</fullName>
                <default>true</default>
                <label>Not Submitted</label>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Edited Post Approval</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>