force-app/main/default/objects/Knowledge__kav/fields/Framework_Approved__c.field-meta.xml
<CustomField>
    <fullName>Framework_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approved</label>
    <type>Checkbox</type>
</CustomField>