force-app/main/default/objects/Knowledge__kav/fields/Framework_Background__c.field-meta.xml
<CustomField>
    <fullName>Framework_Background__c</fullName>
    <label>Background</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>