force-app/main/default/objects/Knowledge__kav/fields/Framework_Benefits__c.field-meta.xml
<CustomField>
    <fullName>Framework_Benefits__c</fullName>
    <label>Benefits of using this framework</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>