force-app/main/default/objects/Knowledge__kav/fields/Framework_Contact__c.field-meta.xml
<CustomField>
    <fullName>Framework_Contact__c</fullName>
    <label>Contact</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>