force-app/main/default/objects/Knowledge__kav/fields/Framework_Content_Type__c.field-meta.xml
<CustomField>
    <fullName>Framework_Content_Type__c</fullName>
    <label>Content Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Framework</fullName>
            </value>
            <value>
                <fullName>Procurement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>