force-app/main/default/objects/Knowledge__kav/fields/Framework_Contract_Id__c.field-meta.xml
<CustomField>
    <fullName>Framework_Contract_Id__c</fullName>
    <label>Contract ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>