force-app/main/default/objects/Knowledge__kav/fields/Framework_DEMO_Posted_for_Approval__c.field-meta.xml
<CustomField>
    <fullName>Framework_DEMO_Posted_for_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Just for demo purpose - 2016.09.30 
Should not be deployed to QA</description>
    <label>DEMO Posted for Approval</label>
    <type>Checkbox</type>
</CustomField>