force-app/main/default/objects/Knowledge__kav/fields/Framework_Description__c.field-meta.xml
<CustomField>
    <fullName>Framework_Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>