force-app/main/default/objects/Knowledge__kav/fields/Framework_Framework__c.field-meta.xml
<CustomField>
    <fullName>Framework_Framework__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Framework lots and suppliers</label>
    <referenceTo>Master_Framework__c</referenceTo>
    <relationshipLabel>Framework Articles</relationshipLabel>
    <relationshipName>Knowledge_Frameworks</relationshipName>
    <type>Lookup</type>
</CustomField>