force-app/main/default/objects/Knowledge__kav/fields/Framework_Framework_details__c.field-meta.xml
<CustomField>
    <fullName>Framework_Framework_details__c</fullName>
    <label>Framework details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>