force-app/main/default/objects/Knowledge__kav/fields/Framework_Framework_FAQ_Article__c.field-meta.xml
<CustomField>
    <fullName>Framework_Framework_FAQ_Article__c</fullName>
    <label>Framework FAQ Article</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>