force-app/main/default/objects/Knowledge__kav/fields/Framework_Framework_Synopsis__c.field-meta.xml
<CustomField>
    <fullName>Framework_Framework_Synopsis__c</fullName>
    <label>Framework Synopsis</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>