force-app/main/default/objects/Knowledge__kav/fields/Framework_How_to_buy__c.field-meta.xml
<CustomField>
    <fullName>Framework_How_to_buy__c</fullName>
    <label>How to buy</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>