force-app/main/default/objects/Knowledge__kav/fields/Framework_Main__c.field-meta.xml
<CustomField>
    <fullName>Framework_Main__c</fullName>
    <label>Main</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>