force-app/main/default/objects/Knowledge__kav/fields/Framework_Procurement_Documents__c.field-meta.xml
<CustomField>
    <fullName>Framework_Procurement_Documents__c</fullName>
    <label>Procurement Documents</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>