force-app/main/default/objects/Knowledge__kav/fields/Framework_Product_types__c.field-meta.xml
<CustomField>
    <fullName>Framework_Product_types__c</fullName>
    <label>Product types</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>