force-app/main/default/objects/Knowledge__kav/fields/Framework_Publication_Status__c.field-meta.xml
<CustomField>
    <fullName>Framework_Publication_Status__c</fullName>
    <label>Publication Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>