force-app/main/default/objects/Knowledge__kav/fields/Framework_Savings__c.field-meta.xml
<CustomField>
    <fullName>Framework_Savings__c</fullName>
    <label>Savings</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>