force-app/main/default/objects/Knowledge__kav/fields/Framework_side__c.field-meta.xml
<CustomField>
    <fullName>Framework_side__c</fullName>
    <label>side</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>