force-app/main/default/objects/Knowledge__kav/fields/Portal_Help_Article_Article_Body__c.field-meta.xml
<CustomField>
    <fullName>Portal_Help_Article_Article_Body__c</fullName>
    <label>Article Body</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>