force-app/main/default/objects/Knowledge__kav/fields/Portal_Help_Article_Cons__c.field-meta.xml
<CustomField>
    <fullName>Portal_Help_Article_Cons__c</fullName>
    <inlineHelpText>Used in overview table</inlineHelpText>
    <label>Cons</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>