force-app/main/default/objects/Knowledge__kav/fields/Portal_Help_Article_Cons_Summary__c.field-meta.xml
<CustomField>
    <fullName>Portal_Help_Article_Cons_Summary__c</fullName>
    <label>Cons - Summary</label>
    <type>TextArea</type>
</CustomField>