force-app/main/default/objects/Knowledge__kav/fields/Portal_Help_Article_For_Buyer_or_Selle28__c.field-meta.xml
<CustomField>
    <fullName>Portal_Help_Article_For_Buyer_or_Selle28__c</fullName>
    <label>For Buyer or Supplier?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Buyer</fullName>
            </value>
            <value>
                <fullName>Supplier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>