force-app/main/default/objects/Knowledge__kav/fields/Portal_Help_Article_Go_to_button_text__c.field-meta.xml
<CustomField>
    <fullName>Portal_Help_Article_Go_to_button_text__c</fullName>
    <inlineHelpText>Used on the overview page (the buttons above and below the table)</inlineHelpText>
    <label>Go to - button text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>