force-app/main/default/objects/Knowledge__kav/fields/Portal_Help_Article_Help_Category__c.field-meta.xml
<CustomField>
    <fullName>Portal_Help_Article_Help_Category__c</fullName>
    <label>Help Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Text Content</fullName>
            </value>
            <value>
                <fullName>Ways to buy through CCS</fullName>
            </value>
            <value>
                <fullName>Overview Table</fullName>
            </value>
            <value>
                <fullName>Frameworks</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>