force-app/main/default/objects/Knowledge__kav/fields/Portal_Help_Article_List_Order__c.field-meta.xml
<CustomField>
    <fullName>Portal_Help_Article_List_Order__c</fullName>
    <label>List Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>