force-app/main/default/objects/Knowledge__kav/fields/Portal_Help_Article_Nest_Item_in_Lists__c.field-meta.xml
<CustomField>
    <fullName>Portal_Help_Article_Nest_Item_in_Lists__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When checked, this item will appear nested in lists</inlineHelpText>
    <label>Nest Item in Lists</label>
    <type>Checkbox</type>
</CustomField>