force-app/main/default/objects/Knowledge__kav/fields/Portal_Help_Article_Not_appropriate_fo35__c.field-meta.xml
<CustomField>
    <fullName>Portal_Help_Article_Not_appropriate_fo35__c</fullName>
    <inlineHelpText>Used in overview table</inlineHelpText>
    <label>Not appropriate for</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>