force-app/main/default/objects/Knowledge__kav/fields/Portal_Help_Article_Short_Subtitle__c.field-meta.xml
<CustomField>
    <fullName>Portal_Help_Article_Short_Subtitle__c</fullName>
    <label>Short Subtitle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>