force-app/main/default/objects/Knowledge__kav/fields/Portal_Help_Article_Site_URL__c.field-meta.xml
<CustomField>
    <fullName>Portal_Help_Article_Site_URL__c</fullName>
    <inlineHelpText>URL of external site that is being linked to</inlineHelpText>
    <label>Site URL</label>
    <type>Url</type>
</CustomField>