force-app/main/default/objects/Knowledge__kav/fields/Portal_Help_Article_Time_to_supply_Sum48__c.field-meta.xml
<CustomField>
    <fullName>Portal_Help_Article_Time_to_supply_Sum48__c</fullName>
    <label>Time to supply - Summary</label>
    <type>TextArea</type>
</CustomField>