force-app/main/default/objects/Knowledge__kav/fields/Portal_Help_Article_Way_to_Buy_Type__c.field-meta.xml
<CustomField>
    <fullName>Portal_Help_Article_Way_to_Buy_Type__c</fullName>
    <inlineHelpText>This is used to sort between Catalogue and Framework articles in the CCS Portal</inlineHelpText>
    <label>Way to Buy Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Catalogue</fullName>
            </value>
            <value>
                <fullName>Framework</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>