force-app/main/default/objects/Knowledge__kav/fields/Portal_Help_Article_What_you_can_buy_S38__c.field-meta.xml
<CustomField>
    <fullName>Portal_Help_Article_What_you_can_buy_S38__c</fullName>
    <inlineHelpText>Used in Comparison Cards in the Portal</inlineHelpText>
    <label>What you can buy - Summary</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>