force-app/main/default/objects/Knowledge__kav/fields/Portal_News_Article_Image_Alt_Text_Hea19__c.field-meta.xml
<CustomField>
    <fullName>Portal_News_Article_Image_Alt_Text_Hea19__c</fullName>
    <label>Image Alt Text - Header</label>
    <length>255</length>
    <type>Text</type>
</CustomField>