force-app/main/default/objects/Knowledge__kav/fields/Portal_News_Article_Image_URL_Header__c.field-meta.xml
<CustomField>
    <fullName>Portal_News_Article_Image_URL_Header__c</fullName>
    <inlineHelpText>Insert a link to an image here if you&apos;d like this news item to have a full sized header image</inlineHelpText>
    <label>Image URL - Header</label>
    <length>255</length>
    <type>Text</type>
</CustomField>