force-app/main/default/objects/Knowledge__kav/fields/Portal_News_Article_Image_URL_Thumbnai59__c.field-meta.xml
<CustomField>
    <fullName>Portal_News_Article_Image_URL_Thumbnai59__c</fullName>
    <label>Image URL - Thumbnail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>