force-app/main/default/objects/Knowledge__kav/fields/Portal_News_Article_News_Category__c.field-meta.xml
<CustomField>
    <fullName>Portal_News_Article_News_Category__c</fullName>
    <label>News Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Blog</fullName>
            </value>
            <value>
                <fullName>News</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Case study</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>