force-app/main/default/objects/Knowledge__kav/fields/Portal_News_Article_Publish_Date_For_W40__c.field-meta.xml
<CustomField>
    <fullName>Portal_News_Article_Publish_Date_For_W40__c</fullName>
    <inlineHelpText>This is the publish date that will be shown on the CCS Portal Website. It also determines the order of news articles on that site.</inlineHelpText>
    <label>Publish Date (For Website)</label>
    <type>DateTime</type>
</CustomField>