force-app/main/default/objects/Knowledge__kav/recordTypes/Framework.recordType-meta.xml
<RecordType>
    <fullName>Framework</fullName>
    <active>true</active>
    <label>Framework</label>
</RecordType>