force-app/main/default/objects/Knowledge__kav/recordTypes/Help_Topic.recordType-meta.xml
<RecordType>
    <fullName>Help_Topic</fullName>
    <active>true</active>
    <label>Help Topic</label>
</RecordType>