force-app/main/default/objects/Knowledge__kav/recordTypes/Portal_Help_Article.recordType-meta.xml
<RecordType>
    <fullName>Portal_Help_Article</fullName>
    <active>true</active>
    <label>Portal_Help_Article</label>
</RecordType>