force-app/main/default/objects/Knowledge__kav/recordTypes/Portal_News_Article.recordType-meta.xml
<RecordType>
    <fullName>Portal_News_Article</fullName>
    <active>false</active>
    <label>Portal_News_Article</label>
</RecordType>