force-app/main/default/objects/Knowledge__kav/validationRules/Flesch_Kincaid_Score.validationRule-meta.xml
<ValidationRule>
    <fullName>Flesch_Kincaid_Score</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
Flesch_Kincaid_Score__c &gt; 100.00,
Flesch_Kincaid_Score__c &lt; 0
)</errorConditionFormula>
    <errorMessage>Flesch Kincaid score must be between 0.0 and 100.0, up to one decimal place.</errorMessage>
</ValidationRule>