force-app/main/default/objects/Knowledge__kav/listViews/Framework_Published_Articles.listView-meta.xml
<ListView>
    <fullName>Framework_Published_Articles</fullName>
    <columns>TITLE</columns>
    <columns>ARTICLE_NUMBER</columns>
    <columns>FAQ_Framework__c</columns>
    <columns>Framework_Framework_details__c</columns>
    <columns>Framework_Benefits__c</columns>
    <columns>FAQ_Expiry_Date_Time__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PUBLISH_STATUS</field>
        <operation>equals</operation>
        <value>2</value>
    </filters>
    <filters>
        <field>LANGUAGE</field>
        <operation>equals</operation>
        <value>en_US</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Knowledge__kav.Framework</value>
    </filters>
    <label>Framework Published Articles</label>
</ListView>